# ChangeLog for media-libs/mutagen
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/ChangeLog,v 1.71 2009/07/05 13:52:10 ssuominen Exp $

*mutagen-1.16 (05 Jul 2009)

  05 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> +mutagen-1.16.ebuild:
  Version bump wrt #276523, thanks to lily for reporting.

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> mutagen-1.15.ebuild:
  Marked ~hppa (bug #272746).

  08 Jan 2009; Brent Baude <ranger@gentoo.org> mutagen-1.15.ebuild:
  stable ppc64, bug 251844

  03 Jan 2009; nixnut <nixnut@gentoo.org> mutagen-1.15.ebuild:
  ppc stable #251844

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> mutagen-1.15.ebuild:
  Stable on sparc, bug #251844

  25 Dec 2008; Tobias Klausmann <klausman@gentoo.org> mutagen-1.15.ebuild:
  Stable on alpha, bug #251844

  25 Dec 2008; Markus Meier <maekke@gentoo.org> mutagen-1.15.ebuild:
  amd64/x86 stable, bug #251844

*mutagen-1.15 (04 Dec 2008)

  04 Dec 2008; <ssuominen@gentoo.org> +mutagen-1.15.ebuild:
  Version bump for bug 249604, thanks to Kai Huuhko.

  13 Aug 2008; Alexis Ballier <aballier@gentoo.org> -mutagen-1.12.ebuild,
  -mutagen-1.13.ebuild:
  remove old

  09 Aug 2008; Santiago M. Mola <coldwind@gentoo.org> mutagen-1.14.ebuild:
  amd64 stable wrt bug #234212

  09 Aug 2008; Alexis Ballier <aballier@gentoo.org> mutagen-1.14.ebuild:
  skip tests if flac isn't built with ogg useflag, part of bug #234212

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> mutagen-1.14.ebuild:
  Stable on ppc64; bug #234212

  08 Aug 2008; Raúl Porcel <armin76@gentoo.org> mutagen-1.14.ebuild:
  alpha/x86 stable wrt #234212

  08 Aug 2008; nixnut <nixnut@gentoo.org> mutagen-1.14.ebuild:
  Stable on ppc wrt bug 234212

  07 Aug 2008; Ferris McCormick <fmccor@gentoo.org> mutagen-1.14.ebuild:
  Sparc stable --- Bug #234212 --- all some huge number of tests pass.

*mutagen-1.14 (04 Jun 2008)
