@@ -1,0 +1,28 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/Attic/mutagen-1.18.ebuild,v 1.1 2009/10/27 11:37:33 aballier Exp $
+
+EAPI=2
+inherit distutils
+
+DESCRIPTION="Mutagen is an audio metadata tag reader and writer implemented in pure Python."
+HOMEPAGE="http://code.google.com/p/mutagen"
+SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE="test"
+
+RDEPEND=">=dev-lang/python-2.4"
+DEPEND="${RDEPEND}
+	test? (	dev-python/eyeD3
+		dev-python/pyvorbis
+		media-libs/flac[ogg]
+		media-sound/vorbis-tools )"
+
+DOCS="API-NOTES NEWS README TODO TUTORIAL"
+
+src_test() {
+	${python} setup.py test || die "src_test failed"
+}
