@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/mutagen
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/ChangeLog,v 1.71 2009/07/05 13:52:10 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/ChangeLog,v 1.72 2009/10/27 11:37:33 aballier Exp $
+
+*mutagen-1.18 (27 Oct 2009)
+
+  27 Oct 2009; Alexis Ballier <aballier@gentoo.org> +mutagen-1.18.ebuild:
+  version bump, by Arfrever Frehtes Taifersar Arahesis
+  <arfrever@gentoo.org>, bug #288254
 
 *mutagen-1.16 (05 Jul 2009)
 
